# nfl-agent

./: .gitignore  README.md  pyproject.toml
nfl_agent/: main.py
nfl_agent/experiments/: __init__.py  article_relevance_eval.py  compare_results.py  get_articles.py  nfl_stats_agent.py  predictions_eval.py
nfl_agent/experiments/scripts/: analyze_summary_scores.py  compare_predictions_vs_spread.py  evaluate_summaries_human.py  evaluate_summaries_llm_as_judge.py  fetch_article_contents.py  fetch_prematch_spread.py  generate_team_info.py  get_articles.py  label_articles.py
nfl_agent/prompts/article_relevance/: v1.py  v2.py
nfl_agent/prompts/article_summarizer/: v1.py  v2.py
nfl_agent/prompts/probability/: schema.py  v1.py
nfl_agent/src/agents/: nfl_stats_agent.py
nfl_agent/src/models/: espn_responses.py  espn_search.py  probability.py  stats.py
nfl_agent/src/tools/: __init__.py  player_lookup.py  team_lookup.py
nfl_agent/src/tools/article_fetcher/: __init__.py  nodes.py  state.py  tool.py  utils.py
nfl_agent/src/utils/: cache_utils.py  cli.py  client_protocol.py  espn_client.py  settings.py  stats_mapper.py
nfl_agent/tests/: conftest.py
nfl_agent/tests/client/: test_espn_client.py
nfl_agent/tests/test_data/: espn_depth_chart_response.json  team_articles_labelled.json
nfl_agent/tests/tools/: test_article_fetcher.py  test_player_lookup.py  test_team_lookup.py
nfl_agent/tests/utils/: test_stats_mapper.py
slides/nfl-agent/: package.json  pnpm-lock.yaml  slides.md
slides/nfl-agent/pages/: brainstorming.md  design.md  experiments.md  overview.md
