[project]
name = "nfl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cachetools>=5.5.0",
    "html5lib>=1.1",
    "httpx>=0.28.0",
    "inscriptis>=2.3.0",
    "langchain>=0.1.0",
    "langchain-classic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.5.0",
    "trafilatura>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nfl_agent"]

[tool.poe.tasks.format]
help = "Runs python formatting"
shell = """
    ruff format . && ruff check --fix .
"""
